# rammappy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  implementation.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: build.yml  docs.yml  publish.yml  test.yml
docs/: api.md  benchmarks.md  index.html  rammappy.html  search.js
docs/api/: align.md  fasta.md  index.md  io.md  sketch.md
python/rammappy/: __init__.py  align.py  fasta.py  io.py  sketch.py
python/rammappy/_rammappy/: __init__.pyi
src/: align.rs  io.rs  lib.rs  options.rs  sketch.rs
src/fasta/: mod.rs  reader.rs  record.rs  stream.rs
tests/: test_fasta.py  test_options.py  test_rammappy.py  test_send.rs
