[package]
name = "rammappy"
version = "0.1.6"
edition = "2024"

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/tomdstanton/rammappy"
readme = "README.md"

[lib]
name = "_rammappy"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
pyo3-stub-gen = "0.23.0"
rammap-core = "1.1.1"
rayon = "1.10"

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = []
